hphp/hack/test/typecheck/coeffects/rx_example_provisional.php.exp
File "rx_example_provisional.php", line 6, characters 3-5:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "rx_example_provisional.php", line 4, characters 16-17:
  From this declaration, the context of this function body provides the capability Rx
  File "rx_example_provisional.php", line 8, characters 16-23:
  But the function being called requires the capability set {AccessGlobals, Output, WriteProperty}
File "rx_example_provisional.php", line 9, characters 3-5:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "rx_example_provisional.php", line 8, characters 16-23:
  From this declaration, the context of this function body provides the capability set {AccessGlobals, Output, WriteProperty}
  File "rx_example_provisional.php", line 4, characters 16-17:
  But the function being called requires the capability Rx
